Opened 8 years ago

Closed 8 years ago

#12927 closed bug (fixed)

[intel_extreme] Native LVDS mode rejected by driver

Reported by: bbjimmy Owned by: kallisti5
Priority: critical Milestone: R1/beta1
Component: Drivers/Graphics/intel_extreme Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev50505 the intel extreme driver no-longer works on my eeepc

I could not blacklist from the boot menu, II had to make and copy a packages file blacklisting the driver from my pre-packagemanagement partition to get the system to boot properly.

This may have been this way for a while as I haven't updated because of comments about a regression with the intel extreme driver on the irc channel.

Attachments (3)

listdev.txt (2.4 KB ) - added by bbjimmy 8 years ago.
lidtdev outout for my eeepc
listdev.2.txt (2.4 KB ) - added by bbjimmy 8 years ago.
lidtdev outout for my eeepc
syslog (432.4 KB ) - added by bbjimmy 8 years ago.
syslog from hrev50357

Download all attachments as: .zip

Change History (17)

comment:1 by pulkomandy, 8 years ago

Summary: Intelel Extreme driver no longer works.Intel Extreme driver no longer works.

it would be good to know a bit more about when things became broken for you. If you remember which version you were running before, that would be a good start. Otherwise, I'm afraid you'll need to test some old builds to see when the problems started.

comment:2 by michel, 8 years ago

hrev 50522 here. Updated from 50501 last night. The Intel extreme driver gives a completely black screen. Behind the scenes everything seems OK - I can reboot by holding Ctl Alt Del down 4 seconds.

Safe video mode works just fine

comment:3 by pulkomandy, 8 years ago

Please include relevant information:

  • Intel graphics generation or output of listdev
  • How is the display connected (LVDS for Laptop, HDMI, VGA, ?)
  • A syslog with intel_extreme information in it (you can get it after rebooting with VESA mode in /var/log/syslog*)

by bbjimmy, 8 years ago

Attachment: listdev.txt added

lidtdev outout for my eeepc

by bbjimmy, 8 years ago

Attachment: listdev.2.txt added

lidtdev outout for my eeepc

comment:4 by bbjimmy, 8 years ago

I seem to be experiancing multiple isues.

1 the driver fails

2 cannot black-list or select vesa mode from the boot menu.

On hrev50375 the driver fails, but i can black-list it from the boot menu.

comment:5 by bbjimmy, 8 years ago

Further back, hrev50357 driver fails, but can still blacklist it from the boot menu. next try will be before hrev50303

by bbjimmy, 8 years ago

Attachment: syslog added

syslog from hrev50357

comment:6 by bbjimmy, 8 years ago

hrev50162 the driver works. This is the first hrev I could download that was previous to the large commit in hrev50198.

comment:7 by pulkomandy, 8 years ago

From syslog:

6567	KERN: intel_extreme: intel_set_display_mode(1024x600)
6568	KERN: intel_extreme: intel_set_display_mode: invalid mode set!
6569	KERN: intel_extreme: intel_set_display_mode(1024x600)
6570	KERN: intel_extreme: intel_set_display_mode: invalid mode set!
6571	KERN: intel_extreme: intel_set_display_mode(640x350)
6572	KERN: intel_extreme: IsConnected: LVDS C PortRegister: 0x5001180
6573	KERN: intel_extreme: CALLED void Pipe::Enable(bool)
6574	KERN: [36mAGP:[0m create memory 0xd3074c20, base e0010000, size 37000, flags 0
6575	KERN: [36mAGP:[0m allocation is made of reserved memory
6576	KERN: [36mAGP:[0m reserved memory already bound
6577	KERN: intel_extreme: IsConnected: LVDS C PortRegister: 0x5001180
6578	KERN: intel_extreme: CALLED status_t LVDSPort::SetDisplayMode(display_mode *, long unsigned int)
6579	KERN: intel_extreme: SetDisplayMode: LVDS C-3 640x350
6580	KERN: intel_extreme: CALLED status_t intel_propose_display_mode(display_mode *, const display_mode *, const display_mode *)
6581	KERN: intel_extreme: SetDisplayMode: hardware mode will actually be 1024x600 (scaled)

For some reason, the native LVDS mode of the panel is rejected by the driver. It then attempts using 640x350 (strange choice, but whatever) and panel fitting kicks in to still set the panel to 1024x600.

Why is the mode being rejected here?

comment:8 by kallisti5, 8 years ago

Is this still an issue as of the latest nightlies?

comment:9 by waddlesplash, 8 years ago

Summary: Intel Extreme driver no longer works.[intel_extreme] Native LVDS mode rejected by driver

comment:10 by bipolar, 8 years ago

Could #12988 be related to this?

comment:11 by axeld, 8 years ago

Owner: changed from axeld to kallisti5
Status: newassigned

comment:12 by pulkomandy, 8 years ago

Please try with hrev51078.

comment:13 by bipolar, 8 years ago

Hello. I was able to do a quick test with hrev51090 on my netbook (Intel Classmate PC clone), Atom N450, 1024x600 10" screen. It now works without visible issues!

It is great to be able to use this little machine once again with Haiku. Thanks a lot for your work Pulkomandy!

As I've mentioned earlier, I thought #12988 could be related to this. For me, both issues are now fixed.

comment:14 by pulkomandy, 8 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.